# TRv1

./: Cargo.toml  DESIGN.md  Makefile  README.md  TRV1_PHASE1_CHANGES.md
.github/workflows/: release.yml
accounts-cluster-bench/: Cargo.toml
accounts-db/: Cargo.toml
accounts-db/src/: account_cache.rs  accounts_db.rs  lib.rs  state_rent_expiry.rs  tiered_storage_config.rs  trv1_maintenance.rs  trv1_storage_adapter.rs
bench-tps/: Cargo.toml
bench-tps/src/: keypairs.rs  main.rs
benches/trv1-bench/: Cargo.toml
benches/trv1-bench/benches/: cache_bench.rs  consensus_bench.rs  fee_market_bench.rs  rent_bench.rs  staking_bench.rs
benches/trv1-bench/src/: helpers.rs  lib.rs
builtins/: Cargo.toml
builtins/src/: lib.rs
cli/: Cargo.toml
cli/src/: clap_app.rs  cli.rs  developer_rewards.rs  governance.rs  lib.rs  network_info.rs  passive_stake.rs  treasury.rs  trv1_validators.rs
client-test/: Cargo.toml
consensus-bft/: Cargo.toml
consensus-bft/src/: config.rs  engine.rs  evidence.rs  lib.rs  proposer.rs  timeout.rs  types.rs  validator_set.rs
consensus-net/: Cargo.toml
consensus-net/src/: config.rs  error.rs  lib.rs  message.rs  peer_manager.rs  sync.rs  transport.rs
core/: Cargo.toml
core/src/: bft_adapter.rs  block_producer.rs  consensus_service.rs  lib.rs  validator.rs
dev-bins/: Cargo.toml
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: PHASE1_CHANGES.md  benchmarking.md  configuration.md  consensus-bft.md  fee-flow.md  fee-market.md  genesis-config.md  networking.md  rpc-api.md  security-audit.md  tiered-storage.md
faucet/: Cargo.toml
fee-market/: Cargo.toml
fee-market/src/: calculator.rs  config.rs  error.rs  lib.rs  state.rs  tests.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: consensus_engine.rs  fee_calculator.rs  passive_stake.rs  slashing.rs
genesis/: Cargo.toml
genesis/src/: main.rs
gossip-bin/: Cargo.toml
integration-tests/: Cargo.toml
integration-tests/src/: developer_rewards_tests.rs  fee_distribution_tests.rs  harness.rs  inflation_tests.rs  lib.rs  passive_staking_tests.rs  slashing_tests.rs  treasury_tests.rs  validator_set_tests.rs
keygen/: Cargo.toml
ledger-tool/: Cargo.toml
monitoring/: Cargo.toml
monitoring/src/: lib.rs  prometheus.rs
programs/developer-rewards/: Cargo.toml
programs/developer-rewards/src/: constants.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
programs/governance/: Cargo.toml
programs/governance/src/: constants.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs  vote_weight.rs
programs/passive-stake/: Cargo.toml
programs/passive-stake/src/: constants.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
programs/sbf/: Cargo.toml
programs/sbf/tests/: simulation.rs
programs/treasury/: Cargo.toml
programs/treasury/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
rpc-client-api/src/: lib.rs  trv1_response.rs
rpc-test/: Cargo.toml
rpc/src/: lib.rs  rpc_service.rs  trv1_rpc.rs
runtime/: Cargo.toml
runtime/src/: bank.rs  leader_schedule_utils.rs  lib.rs  slashing.rs  trv1_active_set.rs  trv1_constants.rs
runtime/src/bank/: fee_distribution.rs  trv1_fee_integration.rs
runtime/src/bank/partitioned_epoch_rewards/: calculation.rs
scripts/: create-genesis.sh
scripts/local-testnet/: fund-test-accounts.sh  start-testnet.sh  stop-testnet.sh
test-validator/: Cargo.toml
test-validator/src/: lib.rs  trv1_genesis.rs
tests/e2e/: Cargo.toml
tests/e2e/src/: basic_network.rs  fee_lifecycle.rs  governance_lifecycle.rs  helpers.rs  lib.rs  network_stress.rs  passive_staking_lifecycle.rs  treasury_lifecycle.rs  validator_lifecycle.rs
tests/invariants/: Cargo.toml
tests/invariants/src/: consensus_invariants.rs  economic_invariants.rs  lib.rs  staking_invariants.rs
tests/stress/: Cargo.toml  epoch_transition.rs  fee_spike.rs  high_tx_throughput.rs  lib.rs  state_growth.rs  validator_churn.rs
tokens/: Cargo.toml
validator/: Cargo.toml
validator/src/: cli.rs  lib.rs  main.rs
xdp-ebpf/: Cargo.toml
