[package]
name = "trv1-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1", features = ["derive"] }
libfuzzer-sys = "0.4"
trv1-consensus-bft = { path = "../consensus-bft" }
trv1-fee-market = { path = "../fee-market" }
solana-hash = "=4.0.1"
solana-pubkey = { version = "=4.0.0", default-features = false }
solana-signature = { version = "=3.2.0", default-features = false }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "consensus_engine"
path = "fuzz_targets/consensus_engine.rs"
doc = false

[[bin]]
name = "fee_calculator"
path = "fuzz_targets/fee_calculator.rs"
doc = false

[[bin]]
name = "slashing"
path = "fuzz_targets/slashing.rs"
doc = false

[[bin]]
name = "passive_stake"
path = "fuzz_targets/passive_stake.rs"
doc = false
