[package]
name = "trv1-integration-tests"
description = "TRv1 integration tests — comprehensive tests for all TRv1-specific subsystems"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
crate-type = ["lib"]
name = "trv1_integration_tests"

[features]
agave-unstable-api = []

[dependencies]
# TRv1 programs under test
solana-passive-stake-program = { path = "../programs/passive-stake", features = ["agave-unstable-api"] }
solana-treasury-program = { path = "../programs/treasury", features = ["agave-unstable-api"] }
trv1-developer-rewards-program = { workspace = true }

# Runtime & bank
solana-runtime = { workspace = true }

# Core Solana crates
borsh = { workspace = true }
solana-account = { workspace = true }
solana-clock = { workspace = true }
solana-epoch-schedule = { workspace = true }
solana-keypair = { workspace = true }
solana-native-token = { workspace = true }
solana-pubkey = { workspace = true }
solana-rent = { workspace = true }
solana-signer = { workspace = true }
solana-system-interface = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
