[package]
name = "trv1-monitoring"
description = "Performance monitoring and Prometheus metrics for TRv1"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
publish = false

[dependencies]
parking_lot = { workspace = true }

[dev-dependencies]

[lib]
name = "trv1_monitoring"
