[package]
name = "trv1-developer-rewards-program"
description = "TRv1 Developer Rewards program — revenue sharing for dApp developers"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
crate-type = ["lib"]
name = "trv1_developer_rewards_program"

[features]
agave-unstable-api = []

[dependencies]
bincode = { workspace = true }
borsh = { workspace = true }
log = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
solana-account = { workspace = true }
solana-bincode = { workspace = true }
solana-clock = { workspace = true }
solana-instruction = { workspace = true }
solana-native-token = { workspace = true }
solana-packet = { workspace = true }
solana-program-error = { workspace = true }
solana-program-runtime = { workspace = true }
solana-pubkey = { workspace = true, features = ["borsh"] }
solana-sdk-ids = { workspace = true }
solana-svm-log-collector = { workspace = true }
solana-svm-type-overrides = { workspace = true }
solana-transaction-context = { workspace = true, features = ["bincode"] }
thiserror = { workspace = true }
