[package]
name = "trv1-governance-program"
description = "TRv1 Governance program — proposal creation, voting, and execution with commitment-weighted voting"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
crate-type = ["lib"]
name = "trv1_governance_program"

[features]
agave-unstable-api = []

[dependencies]
bincode = { workspace = true }
borsh = { workspace = true }
log = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
solana-account = { workspace = true }
solana-bincode = { workspace = true }
solana-clock = { workspace = true }
solana-hash = { workspace = true, features = ["borsh", "serde"] }
solana-instruction = { workspace = true }
solana-packet = { workspace = true }
solana-program-runtime = { workspace = true }
solana-pubkey = { workspace = true, features = ["borsh", "serde"] }
solana-sdk-ids = { workspace = true }
solana-svm-log-collector = { workspace = true }
solana-svm-type-overrides = { workspace = true }
solana-transaction-context = { workspace = true, features = ["bincode"] }
thiserror = { workspace = true }

[lints]
workspace = true
