[package]
name = "trv1-stress-tests"
description = "Stress test scenarios for TRv1 — high throughput, validator churn, state growth, fee spikes, epoch transitions"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
publish = false

# No library — only integration tests
[lib]
name = "trv1_stress_tests"
path = "lib.rs"

[[test]]
name = "high_tx_throughput"
path = "high_tx_throughput.rs"

[[test]]
name = "validator_churn"
path = "validator_churn.rs"

[[test]]
name = "state_growth"
path = "state_growth.rs"

[[test]]
name = "fee_spike"
path = "fee_spike.rs"

[[test]]
name = "epoch_transition"
path = "epoch_transition.rs"
